add the parallele programation part

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -42,8 +42,10 @@
 	\cvdoubleitem {Langages } 			{C89}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
+
+  \cvdoubleitem {Programation Parall\`ele} {OpenMP} {} {MPI}
 	 
-	\cvdoubleitem{Syst\`eme d\'exploitation}	{Linux}		{}	{MAC OS}
+	\cvdoubleitem{Syst\`eme d'\'exploitation}	{Linux}		{}	{MAC OS}
 	
 \section{Langues \'Etrang\`eres}
 	\cvitem{Anglais}{B2 \'ecrit, B2 parl\'e}
