--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -39,6 +39,8 @@
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
 	 
+  \cvdoubleitem {Parallele Programation} {OpenMP} {} {MPI}
+
 	\cvdoubleitem{Operating Systems}	{Linux}		{}	{MAC OS}
 
 
