corrected some bad accent in engli version

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -19,13 +19,13 @@
 \section{Formation}
 \cventry{2010}{Scientist baccalaureat with honors}{}{}{France}
 {Physic and chemistry, Latin Option}
-\cventry{2010-2011}{PACES (Medicine school)}{Université Lille 2}{Lille}{France}
+\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{France}
 {Not received at contest, Cellular Biology and Histology validated}
-\cventry{2011-2014}{Fundamental Physic licence}{Université Lille 1}{Lille}{France}{Graduated with honors}
+\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{France}{Graduated with honors}
 \cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{France}{Graduated with honors}
 
 \section{Interships}
-\cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by Stéfan Renner}{France}
+\cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by St\'efan Renner}{France}
 {Co-orbitals satellites simulations \\
   Writing in C a n co-orbitals satellites simulator
   \\Data processing and production of animation with GNUPLOT}
