correcing some thing in computer tools part

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -39,7 +39,7 @@
 	Calcul semi-analytique de la temp\'erature de spin du milieu intergalactique à l'\'epoque de la r\'eionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
 
 \section{Informatique}
-	\cvdoubleitem {Langages } 			{C89}	{}	{ Fortran 90}
+	\cvdoubleitem {Langages } 			{C}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
 
