--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -34,8 +34,8 @@
   Implementation and test of wavelet analysis to analyse $21$cm forest\\
   Quasi-analytical process of intergalactic medium (Epoch of Reionization) spin's temperature considering the brightness of radio loud QASARs}
 
-\section{Informatique}
-	\cvdoubleitem {Languages} 			{C89}	{}	{ Fortran 90}
+\section{Computer Tool}
+	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
 	 
