--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -49,7 +49,7 @@
 \cvitem{English}{Writing B2, Speaking B2}
 \cvitem{Spanish}{Writing A2, Speaking A2}
 
-\section{miscellaneous}
+\section{Miscellaneous}
 \cventry{2007}{First aid's diploma}{}{}{}{}
 \cventry{2011}{French driver's licence}{}{}{}{}
 
