correction of bas english

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -10,31 +10,39 @@
 \address{6 mail Atlantis\\App 315\\}{91300 Massy}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
-\title{Master Degrees Gravitationnals Systems Dynamic}
+\title{Master Degree Gravitationnals Systems Dynamic}
 \photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
 \maketitle
 
 \section{Formation}
-\cventry{2010}{Scientist baccalaureat with honors}{}{}{France}
-{Physic and chemistry, Latin Option}
-\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{France}
-{Not received at contest, Cellular Biology and Histology validated}
-\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{France}{Graduated with honors}
+
+\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{France}{In progress}
+
 \cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{France}{Graduated with honors}
 
+\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{France}{Graduated with honors}
+
+\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{France}
+{Not received at contest, Cellular Biology and Histology validated}
+
+\cventry{2010}{Scientist baccalaureat with honors}{}{}{France}
+{Specialized in Physics and chemistry, Latin Option}
+
 \section{Interships}
+
+\cventry{April-July 2015}{LERMA}{Observatoire de Paris}{Directed by Benoit Semelin}{France}{
+  Implementing and testing of wavelet analysis to analyse $21$cm forest\\
+  Processing quasi-analytically of intergalactic medium (Epoch of Reionization) spin's temperature considering the brightness of radio loud QASARs}
+
+
 \cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by St\'efan Renner}{France}
 {Co-orbitals satellites simulations \\
   Writing in C a n co-orbitals satellites simulator
   \\Data processing and production of animation with GNUPLOT}
 
-\cventry{April-July 2015}{LERMA}{Observatoire de Paris}{Directed by Benoit Semelin}{France}{
-  Implementation and test of wavelet analysis to analyse $21$cm forest\\
-  Quasi-analytical process of intergalactic medium (Epoch of Reionization) spin's temperature considering the brightness of radio loud QASARs}
-
-\section{Computer Tool}
+\section{Computer Tools}
 	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
@@ -45,9 +53,9 @@
 
 
 \section{Languages}
-\cvitem{French}{Mother Tongue}
-\cvitem{English}{Writing B2, Speaking B2}
-\cvitem{Spanish}{Writing A2, Speaking A2}
+\cvitem{French}{Native speaking}
+\cvitem{English}{European B2 level}
+\cvitem{Spanish}{European A2 level}
 
 \section{Miscellaneous}
 \cventry{2007}{First aid's diploma}{}{}{}{}
