--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -13,7 +13,7 @@
 \address{6 mail Atlantis\\App 315\\}{91300 Massy}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
-\title{Master 2 Dynamique des Syst\`emes Gravitationnel}
+\title{Master 2 Dynamique des Syst\`emes Gravitationnels}
 %\photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
