removal the photo in english version

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -11,7 +11,7 @@
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
 \title{Master Degree Gravitationnals Systems Dynamic}
-\photo[75pt]{photo_identite_C_Hottier}
+% \photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
 \maketitle
