corectionde l'ordre des item du CV FR

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -2,7 +2,7 @@
 \moderncvtheme[purple]{classic}
 \usepackage[margin=1.5cm]{geometry}
 \usepackage[french]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{fontenc}
 \usepackage{comment}
 
@@ -21,22 +21,22 @@
 
 
 \section{Formation}
-	\cventry{2010}{Baccalaur\'eat Scientifique Mention Bien}{}{}{}
-		{Sp\'ecialit\'e Physique - Chimie, Option Latin}
+	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
+	\cventry{2011-2014}{Licence de Physique Fondamentale}{Universit\'e Lille 1}{}{}{Valid\'e mention Bien}
 	\cventry{2010-2011}{PACES}{Universit\'e Lille 2}{}{}
 		{Non reçu au concours, Biologie Cellulaire et Histologie valid\'ees}
-	\cventry{2011-2014}{Licence de Physique Fondamentale}{Universit\'e Lille 1}{}{}{Valid\'e mention Bien}
-	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
+	\cventry{2010}{Baccalaur\'eat Scientifique Mention Bien}{}{}{}
+		{Sp\'ecialit\'e Physique - Chimie, Option Latin}
 	
 	
 \section{Stages}
+	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
+	Test et mise en oeuvre du traitement en ondelettes discr\`ete pour l'analyse de foret $21$cm.\\
+	Calcul semi-analytique de la temp\'erature de spin du milieu intergalactique à l'\'epoque de la r\'eionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
 	\cventry{Mai-Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
 	{Simulation d'orbites de satellites co-orbitaux\\
 	\'Ecriture en C d'un simulateur d'orbites de n satellites co-orbitaux
 	\\Traitement des donn\'ees et r\'ealisations d'animations avec GNUPLOT}
-	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
-	Test et mise en oeuvre du traitement en ondelettes discr\`ete pour l'analyse de foret $21$cm.\\
-	Calcul semi-analytique de la temp\'erature de spin du milieu intergalactique à l'\'epoque de la r\'eionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{ Fortran 90}
