ajout M2 et stage M2 a version FR

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -21,35 +21,39 @@
 
 
 \section{Formation}
+  \cventry{2015-2016}{Master 2 Dynamique des Systèmes Gravitationnelles}{Observatoire de Paris}{}{}{En cours}
 	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
-	\cventry{2011-2014}{Licence de Physique Fondamentale}{Universit\'e Lille 1}{}{}{Valid\'e mention Bien}
-	\cventry{2010-2011}{PACES}{Universit\'e Lille 2}{}{}
+	\cventry{2011-2014}{Licence de Physique Fondamentale}{Université Lille 1}{}{}{Validé mention Bien}
+	\cventry{2010-2011}{PACES}{Université Lille 2}{}{}
 		{Non reçu au concours, Biologie Cellulaire et Histologie valid\'ees}
-	\cventry{2010}{Baccalaur\'eat Scientifique Mention Bien}{}{}{}
-		{Sp\'ecialit\'e Physique - Chimie, Option Latin}
+	\cventry{2010}{Baccalauréat Scientifique Mention Bien}{}{}{}
+		{Spécialité Physique - Chimie, Option Latin}
 	
 	
 \section{Stages}
+  \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxie :\\
+    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas on reconstruit les profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances(Algorithme MCMC)}
+  
 	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
-	Test et mise en oeuvre du traitement en ondelettes discr\`ete pour l'analyse de foret $21$cm.\\
-	Calcul semi-analytique de la temp\'erature de spin du milieu intergalactique à l'\'epoque de la r\'eionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
+	Test et mise en oeuvre du traitement en ondelettes discrète pour l'analyse de foret $21$cm.\\
+	Calcul semi-analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
 	\cventry{Mai-Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
 	{Simulation d'orbites de satellites co-orbitaux\\
 	\'Ecriture en C d'un simulateur d'orbites de n satellites co-orbitaux
-	\\Traitement des donn\'ees et r\'ealisations d'animations avec GNUPLOT}
+	\\Traitement des données et réalisations d'animations avec GNUPLOT}
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
 	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
 
-  \cvdoubleitem {Programation Parall\`ele} {OpenMP} {} {MPI}
+  \cvdoubleitem {Programmation Parallèle} {OpenMP} {} {MPI}
 	 
-	\cvdoubleitem{Syst\`eme d'\'exploitation}	{Linux}		{}	{MAC OS}
+	\cvdoubleitem{Système d'exploitation}	{Linux}		{}	{MAC OS}
 	
-\section{Langues \'Etrang\`eres}
-	\cvitem{Anglais}{B2 \'ecrit, B2 parl\'e}
-	\cvitem{Espagnol}{A2 \'ecrit, A2 parl\'e} 
+\section{Langues \'Etrangères}
+	\cvitem{Anglais}{B2 écrit, B2 parlé}
+	\cvitem{Espagnol}{A2 écrit, A2 parlé} 
 	 
 \section{Divers}
 	\cventry{2007}{Attestation de Formation aux Premiers Secours}{Protection civile}{}{}{}
