--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -32,7 +32,7 @@
 	
 \section{Stages}
   \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxie :\\
-    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas on reconstruit les profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances(Algorithme MCMC)}
+    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas on reconstruit les profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances (Algorithme MCMC).}
   
 	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
 	Test et mise en oeuvre du traitement en ondelettes discrète pour l'analyse de foret $21$cm.\\
