correction de petit truc

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -31,25 +31,25 @@
 	
 	
 \section{Stages}
-  \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxie :\\
-    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas on reconstruit les profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances (Algorithme MCMC).}
+  \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxies :\\
+    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas, reconstruction des profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances (Algorithme MCMC).}
   
 	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
-	Test et mise en oeuvre du traitement en ondelettes discrète pour l'analyse de foret $21$cm.\\
+	Test et mise en oeuvre du traitement en ondelettes discrètes pour l'analyse de forêts $21$cm.\\
 	Calcul semi-analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
 	\cventry{Mai-Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
-	{Simulation d'orbites de satellites co-orbitaux\\
+	{Simulations d'orbites de satellites co-orbitaux\\
 	\'Ecriture en C d'un simulateur d'orbites de n satellites co-orbitaux
 	\\Traitement des données et réalisations d'animations avec GNUPLOT}
 
 \section{Informatique}
-	\cvdoubleitem {Langages } 			{C}	{}	{ Fortran 90}
+	\cvdoubleitem {Langages } 			{C}	{}	{Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
-	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
+	\cvdoubleitem {}					{Bash}	{}	{LaTex}
 
-  \cvdoubleitem {Programmation Parallèle} {OpenMP} {} {MPI}
+  \cvdoubleitem {Calcul Parallèle} {OpenMP} {} {MPI}
 	 
-	\cvdoubleitem{Système d'exploitation}	{Linux}		{}	{MAC OS}
+	\cvdoubleitem{Système d'exploitation}	{Linux}		{}	{MAC OS X}
 	
 \section{Langues \'Etrangères}
 	\cvitem{Anglais}{B2 écrit, B2 parlé}
