mise a jour du cv Anglais

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -18,26 +18,30 @@
 
 \section{Formation}
 
-\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{France}{In progress}
+\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{}{In progress}
 
-\cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{France}{Graduated with honors}
+\cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
-\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{France}{Graduated with honors}
+\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{}{Graduated with honors}
 
-\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{France}
+\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{}
 {Not received at contest, Cellular Biology and Histology validated}
 
-\cventry{2010}{Scientist baccalaureat with honors}{}{}{France}
+\cventry{2010}{Scientist baccalaureat with honors}{}{}{}
 {Specialized in Physics and chemistry, Latin Option}
 
-\section{Interships}
+\section{Internships}
 
-\cventry{April-July 2015}{LERMA}{Observatoire de Paris}{Directed by Benoit Semelin}{France}{
+\cventry{March-July 2016}{IAP}{Paris}{}{Directed By Gary Mamon}
+{Non spherical galaxy cluster modelisation :\\
+Since observed position on the sky and line of sight velocity of tracers in the cluster, reconstruction of mass profile and velocity anisotropy profile, using likelihood maximisation (MCMC algorithm)}
+
+\cventry{April-July 2015}{LERMA}{Observatoire de Paris}{Directed by Benoit Semelin}{}{
   Implementing and testing of wavelet analysis to analyse $21$cm forest\\
   Processing quasi-analytically of intergalactic medium (Epoch of Reionization) spin's temperature considering the brightness of radio loud QASARs}
 
 
-\cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by St\'efan Renner}{France}
+\cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by St\'efan Renner}{}
 {Co-orbitals satellites simulations \\
   Writing in C a n co-orbitals satellites simulator
   \\Data processing and production of animation with GNUPLOT}
@@ -45,11 +49,11 @@
 \section{Computer Tools}
 	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
 	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
-	\cvdoubleitem {}					{Shell : Bash}	{}	{LaTex}
+	\cvdoubleitem {}					{Bash}	{}	{LaTex}
 	 
   \cvdoubleitem {Parallele Programation} {OpenMP} {} {MPI}
 
-	\cvdoubleitem{Operating Systems}	{Linux}		{}	{MAC OS}
+	\cvdoubleitem{Operating Systems}	{Linux}		{}	{MAC OS X}
 
 
 \section{Languages}
