--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -21,7 +21,8 @@
 
 
 \section{Formation}
-  \cventry{2015-2016}{Master 2 Dynamique des Systèmes Gravitationnelles}{Observatoire de Paris}{}{}{En cours}
+  \cventry{2015-2016}{Master 2 Dynamique des Systèmes Gravitationnelles}{Observatoire de
+    Paris}{}{}{Validé mention Bien}
 	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
 	\cventry{2011-2014}{Licence de Physique Fondamentale}{Université Lille 1}{}{}{Validé mention Bien}
 	\cventry{2010-2011}{PACES}{Université Lille 2}{}{}
