--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -18,7 +18,7 @@
 
 \section{Formation}
 
-\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{}{In progress}
+\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
 \cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
