Ajout du doctorat dans la version française

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -13,7 +13,7 @@
 \address{6 mail Atlantis\\App 315\\}{91300 Massy}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
-\title{Master 2 Dynamique des Syst\`emes Gravitationnels}
+\title{Doctorat $1^{er}$ année}
 %\photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
@@ -21,6 +21,9 @@
 
 
 \section{Formation}
+\cventry{2016-2019}{Doctorat}{Observatoire de Paris ED 127}{GEPI}
+{sous la direction de C. Babusiaux}{\'Etudes de la structure de la Voie Lactée à l'aide des
+  données GAIA}
   \cventry{2015-2016}{Master 2 Dynamique des Systèmes Gravitationnelles}{Observatoire de
     Paris}{}{}{Validé mention Bien}
 	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
@@ -35,13 +38,11 @@
   \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxies :\\
     \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas, reconstruction des profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances (Algorithme MCMC).}
   
-	\cventry{Avril-Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
+	\cventry{Avril - Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
 	Test et mise en oeuvre du traitement en ondelettes discrètes pour l'analyse de forêts $21$cm.\\
-	Calcul semi-analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
-	\cventry{Mai-Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
-	{Simulations d'orbites de satellites co-orbitaux\\
-	\'Ecriture en C d'un simulateur d'orbites de n satellites co-orbitaux
-	\\Traitement des données et réalisations d'animations avec GNUPLOT}
+	Calcul semi - analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
+	\cventry{Mai - Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
+  {\'Etude de la dynamique des satellites co - orbitaux par la simulation}
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{Fortran 90}
