misa a jour de mon CV

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -10,7 +10,7 @@
 
 \firstname{Cl\'ement}
 \familyname{Hottier}
-\address{6 mail Atlantis\\App 315\\}{91300 Massy}
+\address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
 \title{Doctorat $1^{er}$ année}
@@ -46,12 +46,11 @@
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{Fortran 90}
-	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
+	\cvdoubleitem {}					{Python}		{} 	{Java}
 	\cvdoubleitem {}					{Bash}	{}	{LaTex}
 
   \cvdoubleitem {Calcul Parallèle} {OpenMP} {} {MPI}
 	 
-	\cvdoubleitem{Système d'exploitation}	{Linux}		{}	{MAC OS X}
 	
 \section{Langues \'Etrangères}
 	\cvitem{Anglais}{B2 écrit, B2 parlé}
