--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -7,16 +7,19 @@
 
 \firstname{Cl\'ement}
 \familyname{Hottier}
-\address{6 mail Atlantis\\App 315\\}{91300 Massy}
+\address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
-\title{Master Degree Gravitationnals Systems Dynamic}
+\title{PhD $1^{st}$ years}
 % \photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
 \maketitle
 
 \section{Formation}
+
+\cventry{2016-2019} {PhD Thesis} {Observatoire de Paris ED 127}{GEPI}
+{Supervised by C. Babusiaux}{Study of the Milky Way structure with GAIA survey}
 
 \cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
@@ -48,12 +51,11 @@ Since observed position on the sky and line of sight velocity of tracers in the 
 
 \section{Computer Tools}
 	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
-	\cvdoubleitem {}					{Python}		{} 	{GNUPLOT}
+	\cvdoubleitem {}					{Python}		{} 	{Java}
 	\cvdoubleitem {}					{Bash}	{}	{LaTex}
 	 
   \cvdoubleitem {Parallele Programation} {OpenMP} {} {MPI}
 
-	\cvdoubleitem{Operating Systems}	{Linux}		{}	{MAC OS X}
 
 
 \section{Languages}
