--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -10,10 +10,11 @@
 
 \firstname{Cl\'ement}
 \familyname{Hottier}
-\address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
+% \address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
+\address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
 \email{clement.hottier@obspm.fr}
 \phone{06 60 35 56 85}
-\title{Doctorat $1^{er}$ année}
+\title{Doctorat $2^{e}$ année}
 %\photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
@@ -50,9 +51,11 @@
 	\cvdoubleitem {}					{Bash}	{}	{LaTex}
 
   \cvdoubleitem {Calcul Parallèle} {OpenMP} {} {MPI}
+  \cvdoubleitem {} {Java} {} {Python}
 	 
 	
-\section{Langues \'Etrangères}
+\section{Langues}
+\cvitem{Français}{Langue Maternelle}
 	\cvitem{Anglais}{B2 écrit, B2 parlé}
 	\cvitem{Espagnol}{A2 écrit, A2 parlé} 
 	 
