--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -10,10 +10,9 @@
 
 \firstname{Cl\'ement}
 \familyname{Hottier}
-% \address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
 \address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
 \email{clement.hottier@obspm.fr}
-\phone{06 60 35 56 85}
+\phone{+33 1 45 07 79 07}
 \title{Doctorat $2^{e}$ année}
 %\photo[75pt]{photo_identite_C_Hottier}
 
