--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -7,10 +7,10 @@
 
 \firstname{Cl\'ement}
 \familyname{Hottier}
-\address{103 Avenue de Paris\\Bat. D1, App. D127\\}{91300 Massy}
+\address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
 \email{clement.hottier@obspm.fr}
-\phone{06 60 35 56 85}
-\title{PhD $1^{st}$ years}
+\phone{+33 1 45 07 79 07}
+\title{PhD $2^{nd}$ years}
 % \photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
