ajout des publication

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -13,7 +13,7 @@
 \address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
 \email{clement.hottier@obspm.fr}
 \phone{+33 1 45 07 79 07}
-\title{Doctorat $2^{e}$ année}
+\title{Doctorat $3^{e}$ année}
 %\photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
@@ -27,22 +27,33 @@
   \cventry{2015-2016}{Master 2 Dynamique des Systèmes Gravitationnelles}{Observatoire de
     Paris}{}{}{Validé mention Bien}
 	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
-	\cventry{2011-2014}{Licence de Physique Fondamentale}{Université Lille 1}{}{}{Validé mention Bien}
-	\cventry{2010-2011}{PACES}{Université Lille 2}{}{}
-		{Non reçu au concours, Biologie Cellulaire et Histologie valid\'ees}
-	\cventry{2010}{Baccalauréat Scientifique Mention Bien}{}{}{}
-		{Spécialité Physique - Chimie, Option Latin}
 	
+\section{Publication}%
+\cventry{02/2019}
+{Gaia-2MASS 3D maps of Galactic interstellar dust within 3 kpc}
+{Lallement \textit{et. al.}}
+{Accepté A\&A}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2019arXiv190204116L}}
+{}
+
+\cventry{08/2018}
+{Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
+{Bolgar \textit{et. al.}}
+{MNRAS}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2018MNRAS.478.5564B}}
+{}
+
+
 	
 \section{Stages}
   \cventry{Mars - Juillet 2016}{IAP}{Paris}{Sous la direction de Gary Mamon}{}{Modélisation non sphérique d'amas de galaxies :\\
-    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de traceurs dans l'amas, reconstruction des profils de masse et d'anisotropie des vitesses par maximisation de vraisemblances (Algorithme MCMC).}
+    \`A partir de l'observation de positions projetées sur le ciel et des vitesses radiales de
+  traceurs dans l'amas, reconstruction des profils de masse et d'anisotropie des vitesses par
+maximisation de vraisemblances (Algorithme Metropolis-Asting).}
   
 	\cventry{Avril - Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
 	Test et mise en oeuvre du traitement en ondelettes discrètes pour l'analyse de forêts $21$cm.\\
 	Calcul semi - analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
-	\cventry{Mai - Juin 2014}{IMCCE}{Observatoire de Lille}{Sous la direction de St\'efan Renner}{}
-  {\'Etude de la dynamique des satellites co - orbitaux par la simulation}
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{Fortran 90}
@@ -57,9 +68,5 @@
 \cvitem{Français}{Langue Maternelle}
 	\cvitem{Anglais}{B2 écrit, B2 parlé}
 	\cvitem{Espagnol}{A2 écrit, A2 parlé} 
-	 
-\section{Divers}
-	\cventry{2007}{Attestation de Formation aux Premiers Secours}{Protection civile}{}{}{}
-	\cventry{2011}{Permis de Conduire}{}{}{}{}
 
 \end{document}
