--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -28,7 +28,7 @@
     Paris}{}{}{Validé mention Bien}
 	\cventry{2014-2015}{Master 1 Sciences de l'Univers et Technologies Spatiales}{Observatoire de Paris}{}{}{Valid\'e mention Bien, class\'e 3$^e$}
 	
-\section{Publication}%
+\section{Publications}%
 \cventry{02/2019}
 {Gaia-2MASS 3D maps of Galactic interstellar dust within 3 kpc}
 {Lallement \textit{et. al.}}
@@ -43,6 +43,20 @@
 {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2018MNRAS.478.5564B}}
 {}
 
+\section{Conférence}
+\cventry{Avril 2019}
+{$53^{rd}$ ESLAB symposium: the Gaia Universe}
+{Noordwijk}
+{Pays-Bas}
+{Dust distribution in the Milky Way}
+{}
+
+\cventry{Juillet 2018}
+{Journée de la SF2A}
+{Bordeau}
+{France}
+{Dust and star distribution in the Milky Way disk}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{2018sf2a.conf..345H}}
 
 	
 \section{Stages}
