--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -1,6 +1,6 @@
 \documentclass{moderncv}
 \moderncvtheme[purple]{classic}
-\usepackage[margin=1.5cm]{geometry}
+\usepackage[margin=1.cm]{geometry}
 \usepackage[french]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{fontenc}
@@ -14,7 +14,7 @@
 \email{clement.hottier@obspm.fr}
 \phone{+33 1 45 07 79 07}
 \title{Doctorat $3^{e}$ année}
-%\photo[75pt]{photo_identite_C_Hottier}
+\photo[75pt]{./photo_cv.jpg}
 
 \begin{document}
 \maketitle
@@ -65,9 +65,8 @@
   traceurs dans l'amas, reconstruction des profils de masse et d'anisotropie des vitesses par
 maximisation de vraisemblances (Algorithme Metropolis-Asting).}
   
-	\cventry{Avril - Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit Semelin}{}{
-	Test et mise en oeuvre du traitement en ondelettes discrètes pour l'analyse de forêts $21$cm.\\
-	Calcul semi - analytique de la température de spin du milieu intergalactique à l'époque de la réionisation prenant en compte le rayonnement d'un QUASAR radio loud.}
+	\cventry{Avril - Juillet 2015}{LERMA}{Observatoire de Paris}{Sous la direction de Benoit
+  Semelin}{}{\'Etude de l'impact des Quasar raio loud sur le MIG}
 
 \section{Informatique}
 	\cvdoubleitem {Langages } 			{C}	{}	{Fortran 90}
