update english cv

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -10,7 +10,8 @@
 \address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
 \email{clement.hottier@obspm.fr}
 \phone{+33 1 45 07 79 07}
-\title{PhD $2^{nd}$ years}
+\title{PhD $3^{rd}$ years}
+\photo[75pt]{./photo_cv.jpg}
 % \photo[75pt]{photo_identite_C_Hottier}
 
 \begin{document}
@@ -25,13 +26,35 @@
 
 \cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
-\cventry{2011-2014}{Fundamental Physic licence}{Universit\'e Lille 1}{Lille}{}{Graduated with honors}
+\section{Publications}%
+\cventry{02/2019}
+{Gaia-2MASS 3D maps of Galactic interstellar dust within 3 kpc}
+{Lallement \textit{et. al.}}
+{Accepté A\&A}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2019arXiv190204116L}}
+{}
 
-\cventry{2010-2011}{PACES (Medicine school)}{Universit\'e Lille 2}{Lille}{}
-{Not received at contest, Cellular Biology and Histology validated}
+\cventry{08/2018}
+{Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
+{Bolgar \textit{et. al.}}
+{MNRAS}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2018MNRAS.478.5564B}}
+{}
 
-\cventry{2010}{Scientist baccalaureat with honors}{}{}{}
-{Specialized in Physics and chemistry, Latin Option}
+\section{Talks}
+\cventry{Avril 2019}
+{$53^{rd}$ ESLAB symposium: the Gaia Universe}
+{Noordwijk}
+{Pays-Bas}
+{Dust distribution in the Milky Way}
+{}
+
+\cventry{Juillet 2018}
+{Journée de la SF2A}
+{Bordeau}
+{France}
+{Dust and star distribution in the Milky Way disk}
+{\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{2018sf2a.conf..345H}}
 
 \section{Internships}
 
@@ -39,15 +62,13 @@
 {Non spherical galaxy cluster modelisation :\\
 Since observed position on the sky and line of sight velocity of tracers in the cluster, reconstruction of mass profile and velocity anisotropy profile, using likelihood maximisation (MCMC algorithm)}
 
-\cventry{April-July 2015}{LERMA}{Observatoire de Paris}{Directed by Benoit Semelin}{}{
-  Implementing and testing of wavelet analysis to analyse $21$cm forest\\
-  Processing quasi-analytically of intergalactic medium (Epoch of Reionization) spin's temperature considering the brightness of radio loud QASARs}
-
-
-\cventry{May-June 2014}{IMCCE}{Observatoire de Lille}{Directed by St\'efan Renner}{}
-{Co-orbitals satellites simulations \\
-  Writing in C a n co-orbitals satellites simulator
-  \\Data processing and production of animation with GNUPLOT}
+\cventry{April-July 2015}
+{LERMA}
+{Observatoire de Paris}
+{Directed by Benoit Semelin}
+{}
+{Study of radio loud quasar imprint on the intergalactique medium}
+  
 
 \section{Computer Tools}
 	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
